fixed cards gap, auto cards load

--- a/src/components/WorkPageGallery/WorkPageGallery.scss
+++ b/src/components/WorkPageGallery/WorkPageGallery.scss
@@ -1,7 +1,7 @@
 .workGallery {
   display: grid;
   grid-auto-rows: 525px;
-  gap: 108px;
+  gap: 50px;
   grid-template-columns: 1fr 1fr;
   grid-template-areas: 
     "one one"
